--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,58 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body{
-    background: white;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: green;
+    margin: 0;
+}
+
+
+.card {
+    width: 350px; 
+    height: 550px; 
+    background-color: white;
+    border-radius: 15px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.suit {
+    font-size: 10em; 
+    color: black; 
+    position: absolute;
+}
+
+.suit.top-left {
+    top: 10px;
+    left: 15px;
+    font-size: 5em; 
+}
+.suit.bottom-right {
+    bottom: 10px;
+    right: 15px;
+    transform: rotate(180deg); 
+    font-size: 5em;
+}
+
+.rank {
+    font-size: 8em; 
+    font-weight: bold;
+    color: black;
+    align-self: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#new-card-button {
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
 }
