--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,18 @@ body {
     align-items: center;
 }
 
-.palo-top-left {
+.palo {
+    font-size: 10em; 
+    color: black; 
+    position: absolute;
+}
+
+.palo.top-left {
     top: 10px;
     left: 15px;
     font-size: 5em; 
 }
-.palo-bottom-right {
+.palo.bottom-right {
     bottom: 10px;
     right: 15px;
     transform: rotate(180deg); 
